src/main/java/com/example/solid/openClosed/example1/good/Shape.java
package com.example.solid.openClosed.example1.good;

public interface Shape {
    double getArea();
}
